# lrzip-rust

./: .gitignore  Cargo.toml  README.md  build.rs
src/: cli.rs  encryption.rs  format.rs  lib.rs  main.rs  pipeline.rs  rzip.rs  ui.rs
src/zpaq/: libzpaq.h  mod.rs
tests/: compatibility_test.py  format_smoke.rs  test_encryption.py
