[package]
name = "lrzip-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.5.0"
colored = "2.0"
indicatif = "0.18.3"
md5 = "0.8.0"
memmap2 = "0.9"
libc = "0.2"
rayon = "1.10"
thiserror = "2.0"
aes = "0.8.4"
cbc = "0.1.2"
pbkdf2 = "0.12.2"
hmac = "0.12.1"
sha2 = "0.10.9"
rand = "0.9.2"
bzip2 = "0.4"
minilzo-rs = "0.6.1"

[dependencies.flate2]
version = "1.0"
default-features = false
features = ["rust_backend"]

[dependencies.xz2]
version = "0.1"
default-features = false
features = ["static"]

[dependencies.zstd]
version = "0.13"
default-features = false
[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }


